--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
 
-<section class="flex-wrapper">
+<section>
   <h2>Featured books</h2>
   <ul>
     <li>
-      <img class="img-flex" src="images/placeholder-2by3.svg" alt="">
+      <img src="images/placeholder-2by3.svg" alt="">
       <hgroup>
         <h3>The Quest for Anderon</h3>
         <h4>Tabatha R. Barrett</h4>
@@ -22,7 +22,7 @@
       <a href="#">Read now</a>
     </li>
     <li>
-      <img class="img-flex" src="images/placeholder-2by3.svg" alt="">
+      <img src="images/placeholder-2by3.svg" alt="">
       <hgroup>
         <h3>Dinosaur Knights</h3>
         <h4>Thomas S. Hedegaard</h4>
@@ -31,7 +31,7 @@
       <a href="#">Read now</a>
     </li>
     <li>
-      <img class="img-flex" src="images/placeholder-2by3.svg" alt="">
+      <img src="images/placeholder-2by3.svg" alt="">
       <hgroup>
         <h3>The Black Dragon</h3>
         <h4>Hana Čejková</h4>
